feat: Render Postgres 연결
- app.js 부팅 시 now()로 DB 연결 확인 로그 추가
- Render Web Service에서 루트 응답, DB 연결 로그 확인

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ NODE_ENV=development
 
 # Logging
 LOG_LEVEL=dev
+
+// DB url은 DB 채널 참조
+# DB URL
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DBNAME?sslmode=require"
