--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "helmet": "^7.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "pg": "^8.16.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.34.0",
