--- a/package.json
+++ b/package.json
@@ -26,9 +26,19 @@
         "pg": "^8.16.3"
     },
     "devDependencies": {
+        "@eslint/css": "^0.10.0",
         "@eslint/js": "^9.34.0",
-        "eslint": "^9.34.0",
+        "@eslint/json": "^0.13.2",
+        "@eslint/markdown": "^7.2.0",
+        "eslint": "^8.57.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-airbnb": "^0.0.1-security",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^4.6.2",
         "globals": "^15.15.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.6.2"
