--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,7 @@
 # Server
 PORT=4000
 NODE_ENV=development
-
-# Logging
 LOG_LEVEL=dev
 
-// DB url은 DB 채널 참조
 # DB URL
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DBNAME?sslmode=require"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DBNAME?schema=public&sslmode=require"
