--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
-        "format:check": "prettier --check ."
+        "format:check": "prettier --check .",
+        "prisma": "prisma",
+        "prisma:studio": "prisma studio",
+        "prisma:generate": "prisma generate",
+        "prisma:migrate": "prisma migrate dev",
+        "prisma:deploy": "prisma migrate deploy",
+        "prisma:check": "node scripts/check-prisma.js"
     },
     "keywords": [
         "express",
@@ -18,6 +24,7 @@
     ],
     "license": "ISC",
     "dependencies": {
+        "@prisma/client": "^6.15.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -41,6 +48,7 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "globals": "^15.15.0",
         "nodemon": "^3.0.1",
-        "prettier": "^3.6.2"
+        "prettier": "^3.6.2",
+        "prisma": "^6.15.0"
     }
 }
