--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev",
         "prisma:deploy": "prisma migrate deploy",
-        "prisma:check": "node scripts/check-prisma.js"
+        "prisma:check": "node scripts/check-prisma.js",
+        "emojis:import": "node scripts/import-emojis.js node_modules/emoji-datasource/emoji.json"
     },
     "keywords": [
         "express",
@@ -25,6 +26,7 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^6.15.0",
+        "emoji-datasource": "^15.0.1",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
