refactor: 폴더 구조 개선
- 전체적인 폴더 구조 개선
- 레이어드 아키텍쳐 도입 및 엔트리 분리

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "Minimal Express skeleton",
     "type": "module",
-    "main": "app.js",
+    "main": "src/server.js",
     "scripts": {
-        "start": "node app.js",
-        "dev": "nodemon app.js",
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
+        "start:app": "node -e \"(async()=>{const m=await import('./src/app.js');console.log('app loaded');})();\"",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
