feat: access token 발급 및 검증
- jwt를 이용한 access token 발급 및 검증 로직 추가
- POST /auth를 통해 jwt 발급

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ LOG_LEVEL=dev
 
 # DB URL
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DBNAME?schema=public&sslmode=require"
+
+# JWT access secret
+JWT_ACCESS_SECRET="SECRET_KEY"
+
+# JWT 유지 시간
+JWT_ACCESS_EXPIRES_IN=int_time
