--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^6.15.0",
-        "emoji-datasource": "^15.0.1",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
+        "emoji-datasource": "^15.0.1",
         "express": "^4.18.2",
         "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "node-cron": "^4.2.1",
         "pg": "^8.16.3"
